# lyra

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  asyncapi.yaml  config.example.toml  docker-compose.yml  lyra.toml.example  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  docker-publish.yml  docs-pages.yml  publish-release.yml  release-lock.yml  release-please.yml  validate-asyncapi.yml
build_scripts/: __init__.py  generate_sdk.py  generate_sdk.sh  release.py
docker/: docker-compose-dev.yml  docker-compose.yml
docs/: README.md  astro.config.mjs  asyncapi.yaml  navigation.json  package-lock.json  package.json
docs/handoffs/: mcp-job-events.md  tui-job-events.md
docs/public/: llms.txt
docs/scripts/: __init__.py  check_site.py  generate_api_docs.py  generate_docs.py  versioned_site.py
examples/lyra-plugin/: lyra.plugin.json  pyproject.toml
lyra_app/: __init__.py  agent_auth.py  auth.py  celery_app.py  config.py  constants.py  db_client.py  derivations.py  job_store.py  job_submission.py  legacy_manifest.py  logging_config.py  main.py  plugin_runtime.py  plugin_state.py  plugins.py  registry.py  spatial_inputs.py  toml.py  update_plugins.py  version.py  worker.py  worker_control.py  worker_launcher.py
lyra_app/converters/: __init__.py  bounds.py  location.py  map.py
lyra_app/db/: __init__.py  client.py  connection.py  dependencies.py  redis.py
lyra_app/loaders/: __init__.py  db.py  osm.py
lyra_app/mcp/: __init__.py  models.py  server.py  tools.py
lyra_app/models/: __init__.py  cvegeo_list.py  geojson.py  met_zone_code.py
lyra_app/routes/: __init__.py  admin.py  data_types.py  download.py  errors.py  geojson.py  health.py  jobs.py  met_zone.py  metrics.py  models.py
notes/: mcp-extension.md  mcp-first-version.md
roadmap/lyra-agent-bridge-hardening/: 00-overview.md  01-official-mcp-transport.md  02-agent-auth-boundary.md  03-typed-mcp-tools.md  04-job-run-provenance.md  05-result-descriptor-provenance.md  06-idempotent-job-submission.md  07-agent-rate-limits.md  08-agent-discovery-utilities.md  09-authenticated-download-handoff.md  10-documentation-and-operations.md  99-validation.md  roadmap.toml
roadmap/lyra-mcp-agent-bridge/: 00-overview.md  01-agent-metric-catalog-contract.md  02-result-descriptor-contract.md  03-result-access-http-api.md  04-lyra-api-result-client.md  06-mcp-search-and-run-tools.md  (+5 more)
tests/: config_helpers.py  redis_job_scripts.py  smoke_plugin_helpers.py  test_api_client_jobs.py  test_batched_table_outputs.py  test_client_generator.py  test_config_contract.py  test_config_loader.py  test_data_types_route.py  test_database_runtime.py  test_docker_filesystem_layout.py  test_docs_contract.py  test_download.py  test_example_config.py  test_generate_sdk.py  test_geometry.py  test_job_store.py  test_jobs_route.py  test_main_lifespan.py  test_mcp_server.py  test_metrics_route.py  test_observability_routes.py  test_plugin_cli.py  test_plugin_loader.py  test_plugin_manifest.py  test_plugin_state.py  test_plugins.py  test_registry_catalog.py  test_release_pipeline.py  test_removed_legacy_routes.py  test_runner.py  test_runtime_config_usage.py  test_sdk_plugin.py  test_sdk_v2_contracts.py  test_sdk_v3_authoring_schema.py  test_sdk_v3_compiler.py  test_sdk_v4_authoring_schema.py  test_sdk_v4_compiler.py  test_toml.py  test_tui_actions.py  (+7 more)
tests/fixtures/plugins/smoke_plugin/: lyra.plugin.json  pyproject.toml
tests/fixtures/plugins/smoke_plugin/smoke_plugin/: __init__.py  runner.py
(+162 files in other folders)
