[project]
name = "lyra-app"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.6.3",
    "fastapi>=0.136.1",
    "redis>=7.4.0",
    "uvicorn>=0.46.0",
    "lyra-sdk",
    "earthengine-api>=1.7.26",
    "lyra-utils",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
lyra-sdk = { workspace = true }
lyra-utils = { workspace = true }

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "S104", "PLR0913", "PLR2004", "C901", "ANN401"]

[dependency-groups]
dev = [
    "pandas-stubs>=3.0.0.260204",
    "types-geopandas>=1.1.3.20260508",
]
