[project]
name = "lyra-app"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.6.3",
    "fastapi>=0.136.1",
    "redis>=7.4.0",
    "uvicorn[standard]>=0.46.0",
    "lyra-sdk",
    "earthengine-api>=1.7.26",
    "lyra-utils",
    "psycopg2>=2.9.12",
    "asyncpg>=0.31.0",
    "jsonschema>=4.26.0",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
lyra-sdk = { workspace = true }
lyra-utils = { workspace = true }
lyra-api = { workspace = true }

[tool.ruff]
extend-exclude = ["packages/lyra_sdk/src/lyra/sdk/db.py"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "S104", "PLR0913", "PLR2004", "C901", "ANN401", "COM812"]
per-file-ignores = { "tests/**/*.py" = ["S101"] }


[dependency-groups]
dev = [
    "ipykernel<7",
    "lyra-api",
    "pandas-stubs>=3.0.0.260204",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "types-geopandas>=1.1.3.20260508",
]
