[project]
name = "lyra-app"
version = "0.16.0"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.6.3",
    "fastapi>=0.136.1",
    "redis>=7.4.0",
    "uvicorn[standard]>=0.46.0",
    "lyra-sdk>=0.11.0",
    "earthengine-api>=1.7.26",
    "lyra-utils>=0.2.0",
    "jsonschema>=4.26.0",
    "mcp>=1,<2",
    "filelock>=3.29.4",
    "psycopg[binary]>=3.3.2",
    "sqlalchemy>=2.0.51",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lyra_app"]

[tool.hatch.build.targets.sdist]
include = ["lyra_app", "LICENSE", "README.md"]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
lyra-sdk = { workspace = true }
lyra-utils = { workspace = true }
lyra-api = { workspace = true }
lyra-tui = { workspace = true }

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "magic-value-comparison",
    "missing-trailing-comma",
    "missing-copyright-notice",
]
per-file-ignores = { "tests/**/*.py" = [
    "assert",
    "undocumented-public-module",
    "undocumented-public-class",
    "undocumented-public-method",
    "undocumented-public-function",
    "undocumented-public-package",
    "undocumented-magic-method",
    "undocumented-public-init",
] }
pydocstyle = { "convention" = "google" }


[dependency-groups]
dev = [
    "griffe>=2.1.0",
    "httpx2>=2.5.0",
    "ipykernel<7",
    "lyra-api",
    "lyra-tui",
    "pandas-stubs>=3.0.0.260204",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.22",
    "ty>=0.0.61",
    "types-geopandas>=1.1.3.20260508",
]
