[project]
name = "lyra-smoke-plugin"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "lyra-sdk",
]

[tool.lyra]
plugin = "smoke_plugin.runner:plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["smoke_plugin"]
